# evebox

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Gopkg.toml  Gruntfile.js  LICENSE.txt  Makefile  README.md  agent.toml  agent.yaml  agent.yaml.example  appveyor.yml  archiveservice.go  bitbucket-pipelines.yml  bower.json  build-containers.sh  build-dist.sh  build.rs  build.sh  clippy.toml  config.go  dev.sh  docker.sh  elastic.js  esproxy.go  eve.go  eve2pcaphandler.go  eve_test.go  evebox-example.yaml  evebox.go  evebox.sh  evebox.yaml-example  evebox.yaml.example  eventservice.go  glide.yaml  (+13 more)
.appveyor/: build.sh
.bintray/: debian.json  tarball.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: builds.yml  docker.yml  macos.yml
.travis/: deploy-packages.sh  docker.sh
agent/: agent.go  client.go  eventsink.go  reader.go
app/: index.html  sample-config.js
app/scripts/: aggregatedalerts.controller.js  alerts.controller.js  app.js  config.controller.js  config.service.js  controller.alerts.js  controller.config.js  controller.event-detail.js  controller.event.js  controller.stats.js  controllers.js  directive.duration.js  directive.evebox-pager.js  directives.js  duration.directive.js  event-table.directive.js  event.controller.js  eventrepository.service.js  events.controller.js  filters.js  mousetrap.service.js  service.config.js  service.eventrepository.js  services.js
app/styles/: app.css  app.less
app/templates/: about.html  aggregate-alerts.html  alerts-aggregated.html  alerts-flat.html  alerts.html  all.html  archive-by-query-progress-modal.html  archive-events-by-query-modal.html  config.html  detail.html  evebox-ip-address.html  evebox-pager.html  event-table.html  event.html  events.html  (+8 more)
appcontext/: appcontext.go
backend/: Makefile  glide.yaml  main.go
cmd/: evebox.go
config/: config.go
core/: alertgroup.go  archiveservice.go  datastore.go  errors.go  eventservice.go  features.go  flowservice.go  notimpeventservice.go  types.go  userstore.go  version.go
data/: config.sqlite
deb/: after-install.sh  after-upgrade.sh  evebox.default  evebox.service
doc/: Makefile  agent-usage.txt  agent.rst  api.rst  authentication.rst  conf.py  dev.sh  elastic-import-usage.txt  elastic-import.rst  elastic-import.yaml  esimport-usage.txt  esimport.rst  esimport.yaml  gencert-usage.txt  index.rst  install.rst  letsencrypt.rst  oneshot.rst  server-oneshot.rst  server-running.rst  server.rst  tls.rst
docker/: Dockerfile  docker-entrypoint.sh
elasticsearch/: alertquery.go  alertqueryservice.go  archive.go  archiveservice.go  bulkeveindexer.go  bulktags.go  bulkupdatetags.go  datastore-alertquery.go  datastore-event.go  datastore-eventquery.go  datastore-eventtags.go  datastore-flowhistogram.go  datastore-geteventbyid.go  datastore.go  document.go  elasticsearch.go  elasticsearch_test.go  error.go  errorresponse.go  esproxy.go  eveindexer.go  eventqueryservice.go  eventservice-tags.go  eventservice.go  flowservice.go  index.go  jsonmap.go  querytypes.go  reportservice.go  requesttypes.go  response.go  responsetypes.go  scratch_test.go  template.go  types.go  util.go
eve/: eve-filter.go  eve.go  eve_test.go  event.go  geoip-filter.go  raw.go  tags-filter.go
evereader/: basicreader.go  basicreader_test.go  bookmark.go  bookmarker.go  evefileprocessor.go  evereader.go  evereader_test.go  followingreader.go  followingreader_test.go  posix.go  windows.go
examples/: agent.yaml  elastic-import.yaml  evebox.yaml
exiter/: exiter.go
frontend/: Config.js  StateService.js  ace-editor.js  alerts.js  config.js  evebox.js  event.js  events.js  filters.js  index.html  main.js  settings.js  state-service.js  topnav-template.html
geoip/: geoip-service.go  geoip.go  geoip_test.go
http/: chain.go  httpclient.go
httpclient/: httpclient.go
httputil/: chain.go  httpclient.go
log/: log.go
packaging/: build-deb.sh  build-rpm.sh  evebox.yaml
pcap/: pcap.go
postgres/: datastore-event.go  datastore.go  eventservice.go  indexer.go  migrator.go  postgres.go  postgres_test.go  process.go  process_test.go  version.go
public/: bundle.js  index.html
resources/: resources.go
rpm/: after-upgrade.sh  before-install.sh  evebox-agent.service  evebox.service  evebox.sysconfig
ruleparser/: parse.go  parse_test.go  rule.go  validate.go
rules/: rulemap.go  rulemap_test.go
server/: alertgrouphandlers.go  appcontext.go  archiveeventhandler.go  archivehandler.go  confighandler.go  es.go  escalatehandler.go  eve2pcaphandler.go  eventbyidhandler.go  eventqueryhandler.go  findflowhandler.go  http.go  inboxhandler.go  netflowhandlers.go  queryhandler.go  reporthandlers.go  server.go  static.go  submithandler.go  versionhandler.go
sqlite/: datastore.go  indexer.go  migrator.go  nosqlite.go  purger.go  querystringparser.go  querystringparser_test.go  sqlbuilder.go  sqlite.go  sqlite_test.go  util.go
src/: bookmark.rs  cert.rs  config.rs  datastore.rs  datetime.rs  error.rs  file.rs  geoip.rs  importer.rs  ingest.rs  lib.rs  logger.rs  oldconfig.rs  oldsettings.rs  packet.rs  path.rs  pcap.rs  prelude.rs  queryparser.rs  querystring.rs  resource.rs  rules.rs  searchquery.rs  settings.rs  types.rs  util.rs  version.rs
suricata-rule-parser/: Cargo.toml
suricata-rule-parser/src/: lib.rs
suricata-rule-parser/test/: test.rules
useragent/: evefilter.go
util/: jsonmap.go  tojson.go  util.go
webapp/: .angular-cli.json  .browserslistrc  .editorconfig  .eslintrc.json  .gitignore  ConfigService.js  EveBoxApi.js  EventServices.js  Makefile  alerts.js  angular-cli.json  angular.json  app-events.js  app.js  app.scss  elapsed-time.js  evebox.js  event-repository.js  event-template.html  event.js  events.js  filters.js  help-modal.js  index.html  karma.conf.js  keyboard-table.js  keyboard.js  main.js  npm-shrinkwrap.json  package-lock.json  package.json  proxy.conf.json  search-link.js  topnav-template.html  topnav.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tslint.json  typings.json  (+5 more)
(+535 files in other folders)
