[package]
name = "evebox"
# Suffix with -dev when not a release.
version = "0.23.0-dev"
authors = ["Jason Ish <ish@unx.ca>"]
edition = "2024"
description = "A web based Suricata event manager"
license = "MIT"
homepage = "https://evebox.org"
repository = "https://github.com/jasonish/evebox"
documentation = "https://evebox.org"

# This is not a guarantee, just helps notify me when the MSRV changes.
rust-version = "1.85.0"

[profile.release]
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"

axum = { version = "0.8.8" }
axum-server = { version = "0.7.3", features = ["tls-rustls-no-provider"] }
axum-extra = { version = "0.10.3", default-features = false, features = ["cookie", "typed-header", "form"] }
hyper = ">=1.7, <1.8"
tokio = { version = "1", default-features = false, features = ["signal", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["set-header", "trace", "limit"] }
futures = "0.3.31"

base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["env", "derive", "color"] }

sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls", "json", "chrono"] }

# While sqlx is nice to use, Rusqlite is fast for bulk operations.
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Hopefully this makes sure both sqlx and rusqlite are on the same version of libsqlite3-sys.
libsqlite3-sys = { version = "=0.30.1" }

filetime = "0.2.26"
glob = "0.3.3"
humantime = "2.3.0"
lazy_static = "1.5.0"
maxminddb = "0.26.0"
md5 = "0.7.0"
mime_guess = "2.0.5"
nom = "8"
percent-encoding = "2.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.27", default-features = false, features = ["json", "rustls-tls", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "hickory-dns"] }
rust-embed = { version = "8.9.0", features = ["debug-embed"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9.34"

suricatax-rule-parser = { git = "https://github.com/jasonish/suricatax-rule-parser-rs", rev = "4b43a70f6e0a892970faa17b08d73d4a3b0b2cba" }

# Currently only used for tracing_subscriber based logging.
time = { version = "0.3.44", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter", "time", "local-time"] }
tracing-log = "0.2.0"

ulid = "1.2.1"
uuid = { version = "1.19.0", features = ["v4"] }
webbrowser = "1.0.6"
regex = "1.12.2"
libc = { version = "0.2.178", default-features = false }
rcgen = "0.13.2"
directories = "6.0.0"
gethostname = "1.1.0"
tempfile = "3.23.0"
inquire = "0.9.1"
chrono = { version = "0.4.42", default-features = false, features = ["std", "now", "serde"] }
log = "0.4.29"
owo-colors = "4.2.3"
indexmap = "2.12.1"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
async-trait = "0.1.89"
