[package]
name = "evebox"
# Suffix with -dev when not a release.
version = "0.25.0-dev"
authors = ["Jason Ish <ish@unx.ca>"]
edition = "2024"
description = "A web based Suricata event manager"
license = "MIT"
homepage = "https://evebox.org"
repository = "https://github.com/jasonish/evebox"
documentation = "https://evebox.org"

# This is not a guarantee, just helps notify me when the MSRV changes.
rust-version = "1.88.0"

[profile.release]
lto = true
opt-level = 3

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"

axum = { version = "0.8.9" }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
axum-extra = { version = "0.12.6", default-features = false, features = ["cookie", "typed-header", "form"] }
tokio = { version = "1", default-features = false, features = ["signal", "macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.6", features = ["set-header", "trace", "limit"] }
futures = "0.3.32"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1.14", features = ["alloc", "std"] }

base64 = "0.22.1"
bcrypt = "0.17.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["env", "derive", "color"] }

sqlx = { version = "0.8.6", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls", "json", "chrono"] }

# Pin the SQLite C library version used by sqlx.
libsqlite3-sys = { version = "=0.30.1" }

filetime = "0.2.27"
glob = "0.3.3"
humantime = "2.3.0"
lazy_static = "1.5.0"
maxminddb = "0.27.3"
md5 = "0.7.0"
mime_guess = "2.0.5"
nom = "8"
percent-encoding = "2.3.2"
rand = "0.9.4"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls-no-provider", "hickory-dns"] }
rust-embed = { version = "8.11.0", features = ["debug-embed"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

suricatax-rule-parser = { git = "https://github.com/jasonish/suricatax-rule-parser-rs", rev = "4b43a70f6e0a892970faa17b08d73d4a3b0b2cba" }

# Currently only used for tracing_subscriber based logging.
time = { version = "0.3.47", features = ["macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "time", "local-time"] }
tracing-log = "0.2.0"

ulid = "1.2.1"
uuid = { version = "1.23.1", features = ["v4"] }
webbrowser = "1.2.1"
regex = "1.12.3"
libc = { version = "0.2.186", default-features = false }
rcgen = "0.13.2"
directories = "6.0.0"
gethostname = "1.1.0"
tempfile = "3.27.0"
inquire = "0.9.4"
chrono = { version = "0.4.44", default-features = false, features = ["std", "now", "serde"] }
log = "0.4.29"
owo-colors = "4.3.0"
indexmap = "2.14.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"
xz2 = { version = "0.1.7", features = ["static"] }
